--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
+    "start:tunnel": "node src/tunnel-entry.js",
     "dev": "node --watch src/index.js",
     "lint": "eslint src",
     "format": "prettier --write \"src/**/*.js\""
@@ -19,11 +20,11 @@
   "author": "EPAM Quizzer",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "socket.io": "^4.6.1",
-    "uuid": "^9.0.0",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "^8.52.0",
