--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,14 +1,35 @@
 {
   "name": "epam-quizzer-frontend",
   "version": "1.0.0",
-  "description": "Quiz buzzer frontend",
+  "description": "Quiz buzzer frontend - React",
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js",
-    "build": "echo 'No build step required'"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start": "vite"
   },
-  "keywords": ["webrtc", "quiz", "buzzer"],
+  "keywords": [
+    "webrtc",
+    "quiz",
+    "buzzer",
+    "react"
+  ],
   "author": "EPAM Quizzer",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@vitejs/plugin-react": "^5.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.29.2",
+    "lucide-react": "^0.563.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-router-dom": "^7.13.0",
+    "socket.io-client": "^4.8.3",
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.182.0",
+    "vite": "^7.3.1"
+  }
 }
